k8s/k8s-go-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-mysql
spec:
  selector:
    app: go-web-mysql
  ports:
    - protocol: TCP
      port: 13306
      targetPort: 3306
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-redis
spec:
  selector:
    app: go-web-redis
  ports:
    - protocol: TCP
      port: 16379
      targetPort: 6379
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
spec:
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 18088
      targetPort: 8088
  type: LoadBalancer
