k8s/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: go-web.com
      http:
        paths:
          - backend:
              service:
                name: go-web
                port:
                  number: 80
            pathType: Prefix
